Clean up target architecture vocabulary
